--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: All-s-Well-That-Ends-Well_2246
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Comedies'
 - !lcsh 'Runaway husbands -- Drama'
 - !lcc 'PR'
+- GITenberg
 title: All's Well That Ends Well
 url: http://www.gutenberg.org/ebooks/2246
